# document-convert

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: publish.yml
crates/cloudiful-docling-convert-web/src/web/: handlers.rs  tests.rs
crates/cloudiful-docling-convert-web/src/web/conversion/: file.rs  mod.rs  support.rs
crates/document-convert/: Cargo.toml
crates/document-convert-cli/: Cargo.toml
crates/document-convert-cli/src/: args.rs  logging.rs  main.rs
crates/document-convert-web/: Cargo.toml
crates/document-convert-web/src/: lib.rs  main.rs
crates/document-convert-web/src/web/: handlers.rs  mod.rs  server.rs  state.rs  support.rs  task_config.rs  tests.rs
crates/document-convert-web/src/web/conversion/: file.rs  mod.rs  support.rs  url.rs
crates/document-convert/src/: conversion.rs  document.rs  error.rs  facade.rs  lib.rs  pdf.rs
crates/document-convert/src/api/: client.rs  docling.rs  mod.rs  result.rs  status.rs
crates/document-convert/src/models/: api.rs  mod.rs  pdf.rs  vlm.rs
crates/document-convert/src/processor/: chunking.rs  mod.rs
crates/document-convert/src/processor/service/: mod.rs  output.rs  pdf.rs  tests.rs  text.rs
web/: .gitignore  README.md  package.json
web/src/lib/: index.ts
web/src/lib/api/: tasks.ts
web/src/lib/components/: FileUploadPanel.svelte  SettingsPanel.svelte  TaskList.svelte  TaskSummary.svelte  UrlSubmitPanel.svelte
web/src/lib/i18n/: en.json  index.ts  zh.json
web/src/lib/stores/: theme.ts
web/src/lib/tasks/: presentation.ts  stats.ts
web/src/lib/types/: tasks.ts
web/src/routes/: +layout.svelte  +page.svelte  layout.css
