[workspace]
members = [
    "crates/document-convert",
    "crates/document-convert-cli",
    "crates/document-convert-web",
]
resolver = "3"

[workspace.package]
version = "0.2.1"

[workspace.dependencies]
axum = "0.8.9"
bytes = "1.12"
chrono = "0.4.45"
clap = "4.6"
dirs = "6.0.0"
document-convert = { path = "crates/document-convert" }
dotenvy = "0.15"
futures = "0.3.32"
log = "0.4.33"
log4rs = "1.4.0"
lopdf = "0.42.0"
rand = "0.10.1"
reqwest = "0.13.4"
serde = "1.0.228"
serde_json = "1.0.150"
tempfile = "3.27.0"
tokio = "1.52.3"
tokio-util = "0.7.18"
tower = "0.5.3"
tower-http = "0.7.0"
uuid = "1.23.4"
