[package]
name = "document-convert-cli"
version.workspace = true
edition = "2024"
publish = false

[[bin]]
name = "document-convert"
path = "src/main.rs"

[dependencies]
bytes.workspace = true
clap = { workspace = true, features = ["derive"] }
dirs.workspace = true
dotenvy.workspace = true
futures.workspace = true
log.workspace = true
log4rs = { workspace = true, features = ["zstd", "background_rotation"] }
document-convert.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["json", "multipart"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = [ "full" ] }

[dev-dependencies]
tempfile.workspace = true
