[package]
name = "document-convert-web"
version.workspace = true
edition = "2024"
publish = false

[[bin]]
name = "document-convert-web"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
dotenvy.workspace = true
document-convert.workspace = true
log.workspace = true
reqwest = { workspace = true, features = ["json", "multipart"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = [ "full" ] }
tokio-util = { workspace = true, features = ["io"] }
tower.workspace = true
tower-http = { workspace = true, features = ["cors", "fs", "trace", "limit"] }
uuid = { workspace = true, features = [ "v4" ] }

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true
